# 2024_pro

./: .pre-commit-config.yaml  packages.txt
python3.12/django/app_01/: .env.dev  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
python3.12/django/app_01/config/: settings.py  urls.py
python3.12/django/app_01/nginx/: Dockerfile  nginx.conf
python3.12/django/app_01/uploads/: views.py
python3.12/django/app_01/uploads/templates/: upload.html
python3.12/django/app_010/: app.yaml  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
python3.12/django/app_010/base/: models.py
python3.12/django/app_010/config/: celery.py  settings.py  urls.py
python3.12/django/app_010/sdk_weather/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
python3.12/django/app_010/users/: models.py
python3.12/django/app_011/: .env   pyproject.toml
python3.12/django/app_011/config/: settings.py  urls.py
python3.12/django/app_011/multyfile/: apps.py  models.py  serializer.py  urls.py  views.py
python3.12/django/app_011/multyfile/migrations/: 0001_initial.py
python3.12/django/app_012/: Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt
python3.12/django/app_012/config/: settings.py  urls.py
python3.12/django/app_012/dl/: apps.py  views.py
python3.12/django/app_012/templates/: home.html
python3.12/django/app_02/app/: Dockerfile  Dockerfile.prod  entrypoint.sh  manage.py  pyproject.toml
python3.12/django/app_02/app/django_start/: asgi.py  settings.py  urls.py  wsgi.py
python3.12/django/app_03/: Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  traefik.dev.toml
python3.12/django/app_03/config/: settings.py
python3.12/django/app_04/: README.md  pyproject.toml
python3.12/django/app_04/backend/endpoints/: models.py  serializers.py  tests.py  urls.py  views.py
python3.12/django/app_04/backend/ml/: registry.py  tests.py
python3.12/django/app_04/backend/research/: ab_test.py  train_income.py
python3.12/django/app_04/backend/server/: settings.py  urls.py  wsgi.py
python3.12/django/app_05/: .env.db  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
python3.12/django/app_05/blog/: admin.py  forms.py  models.py  sitemaps.py  urls.py  views.py
python3.12/django/app_05/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comments.py  0004_rename_comments_comment_and_more.py  0005_post_tags.py
python3.12/django/app_05/blog/models/: Post.py
python3.12/django/app_05/blog/templatetags/: blog_tags.py
python3.12/django/app_05/blog/tests/: test_views.py
python3.12/django/app_05/config/: settings.py  urls.py
python3.12/django/app_06/: .env.db  Dockerfile  pyproject.toml
python3.12/django/app_06/account/: admin.py  auth.py  forms.py  models.py  urls.py  views.py
python3.12/django/app_06/account/migrations/: 0001_initial.py  0002_contact.py
python3.12/django/app_06/account/templates/: base.html
python3.12/django/app_06/account/tests/: test_models.py
python3.12/django/app_06/actions/: admin.py  models.py  utils.py
python3.12/django/app_06/actions/migrations/: 0001_initial.py
python3.12/django/app_06/config/: asgi.py  settings.py  urls.py  wsgi.py
python3.12/django/app_06/images/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
python3.12/django/app_06/images/migrations/: 0001_initial.py  0002_image_total_likes_and_more.py
python3.12/django/app_06/images/templates/: launcher.js
python3.12/django/app_06/nginx/: Dockerfile
python3.12/django/app_06/social/: settings.py  urls.py
python3.12/django/app_07/: .pre-commit-config.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
python3.12/django/app_07/config/: settings.py  urls.py
python3.12/django/app_07/shop/: admin.py  models.py  urls.py  views.py
python3.12/django/app_07/shop/migrations/: 0001_initial.py
python3.12/django/app_08/app/service_2/: Dockerfile  apps.py  pyproject.toml  (+2 more)
python3.12/django/app_09/: pyproject.toml
python3.12/django/app_09/config/: __init__.py  celery.py  settings.py  urls.py
python3.12/django/app_09/order/: models.py  serializers.py  task.py  urls.py  views.py
python3.12/django/app_22/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
python3.12/django/app_22/config/: settings.py  urls.py
python3.12/django/app_22/statistic/: consumer.py  kafka.py  models.py  serializers.py  tests.py  urls.py  views.py
python3.12/django/app_23/: pyproject.toml
python3.12/django/app_23/config/: settings.py  urls.py
python3.12/django/app_23/statistic/: auth.py  consumer.py  models.py  producer.py  serializers.py  urls.py  views.py
python3.12/django/drf/app_01/: .pre-commit-config.yaml  pyproject.toml
python3.12/django/drf/app_03/: pyproject.toml
python3.12/fast/app_01/: README.md  pyproject.toml
python3.12/fast/app_01/backend/: config.py  main.py
python3.12/fast/app_02/: .dockerignore  main.py  pyproject.toml
python3.12/fast/app_03/: docker-compose.yml  pyproject.toml
python3.12/fast/app_04/: Dockerfile  docker-compose.yml  pyproject.toml
python3.12/flask/app_01/: pyproject.toml
python3.12/flask/app_01/minimal_app/: main.py
python3.12/flask/app_01/use_templates/: main.py  test.py
python3.12/flask/app_02/: pyproject.toml
python3.12/flask/app_02/app/: app.py
python3.12/scrappers/bots/: first_bot.py  pyproject.toml
python3.12/web/app_01/: pyproject.toml
python3.12/web/app_01/config_app/: asgi.py  settings.py  urls.py  wsgi.py
python3.12/web/app_01/movie_app/: views.py
python3.12/web/app_03/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
python3.12/web/app_03/config/: settings.py  urls.py
python3.12/web/app_03/pages/: urls.py  views.py
python3.12/web/app_04/: .gitignore  README.md  docker-compose-local.yaml  pyproject.toml
python3.12/web/app_04/backend/: alembic.ini  env.py  main.py
python3.12/web/app_05/: packages.list  pyproject.toml
python3.12/web/app_05/config/: settings.py  urls.py
(+448 files in other folders)
