[tool.poetry]
name = "start-app"
version = "0.1.0"
description = "Start app with django/docker/postgresql"
authors = ["noskill <golanghack@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
