[tool.poetry]
name = "app-012"
version = "0.1.0"
description = ""
authors = ["noskill <golanghack@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
dj-database-url = "^2.2.0"
django-crispy-forms = "^2.2"
gunicorn = "^22.0.0"
pafy = "^0.5.5"
psycopg2-binary = "^2.9.9"
pytz = "^2024.1"
whitenoise = "^6.6.0"
youtube-dl = "^2021.12.17"
crispy-bootstrap4 = "^2024.1"
yt-dlp = "^2024.5.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
