[tool.poetry]
name = "app-04"
version = "0.1.0"
description = "ML app with django"
authors = ["noskill <golanghack@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
numpy = "^1.26.4"
pandas = "^2.2.1"
joblib = "^1.3.2"
scikit-learn = "^1.4.1.post1"
djangorestframework = "^3.15.1"
markdown = "^3.6"
django-filter = "^24.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
