[tool.poetry]
name = "app-05"
version = "0.1.0"
description = "Blog app"
authors = ["noskill <golanghack@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
python-decouple = "^3.8"
django-bootstrap5 = "^23.4"
pytest = "^8.1.1"
django-taggit = "^5.0.1"
markdown = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
