[tool.poetry]
name = "app-06"
version = "0.1.0"
description = "Social app"
authors = ["noskill <golanghack@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
python-config = "^0.1.2"
python-dotenv = "^1.0.1"
python-decouple = "^3.8"
pillow = "^10.3.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
