[tool.poetry]
name = "app-03"
version = "0.1.0"
description = ""
authors = ["noskill <golanghack@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
aioredis = "^2.0.1"
cryptography = "^42.0.8"
aiokafka = "^0.10.0"
kafka = "^1.3.5"
redis = "^5.0.4"
ecdsa = "^0.19.0"
kafka-python-ng = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
