[tool.poetry]
name = "app-01"
version = "0.1.0"
description = "First app with flask"
authors = ["noskill <golanghack@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
