[tool.poetry]
name = "app-03"
version = "0.1.0"
description = "Application for testing work Django in docker"
authors = ["golanghack <golanghack@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
