[tool.poetry]
name = "app-04"
version = "0.1.0"
description = "App with fastapi"
authors = ["golanghack <golanghack@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
redis = "^5.0.2"
types-redis = "^4.6.0.20240218"
uvicorn = "^0.27.1"
sqlalchemy = "2.0.13"
psycopg2 = "2.9.9"
python-dotenv = "1.0.0"
alembic = "1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
