[tool.poetry]
name = "app-01"
version = "0.1.0"
description = "first app with drf"
authors = ["noskill <golanghack@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
